<resources>
    <string name="app_name">testApp</string>

    <!-- BaseActivity -->
    <string name="progress_message">Loading...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sort">정렬</string>
    <string name="setting">설정</string>
    <string name="title_activity_settings">Settings</string>

    <string name="permission_save">저장공간</string>
    <string name="permission_phone">전화</string>
    <string name="permission_mandatory">필수 허용 필요 옵션</string>
    <string name="permission_mandatory_color">필수</string>
    <string name="permission_mandatory_sub">허용을 하셔야 앱 사용이 가능합니다.</string>
    <string name="permission_title">쾌적하고 편리한 앱 이용을 위해\n다음 권한의 허용이 필요합니다.</string>
    <string name="permission_confirm">확인했습니다.</string>

    <string name="adding">추가하기</string>



    <string-array name="folder_sort_array">
        <item>폴더생성날짜</item>
        <item>이름</item>
        <item>이름 역순</item>
    </string-array>

    <string-array name="content_sort_array">
        <item>이름</item>
        <item>이어보기</item>
        <item>NEW</item>
    </string-array>

</resources>
