<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--- 타이틀 영역 -->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_f5">

                <TextView
                    android:id="@+id/tv_per_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#6b6b6b"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="37dp"
                    android:textSize="16.2sp"
                    android:text="@string/permission_title"
                    />

            </android.support.v7.widget.LinearLayoutCompat>

            <!--- 필수 허용 필요 옵션 -->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="31dp"
                android:paddingRight="31dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_per_man_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="#333333"
                    android:layout_marginTop="35dp"
                    android:textSize="15.2sp"
                    android:text="@string/permission_mandatory"
                    />

                <TextView
                    android:id="@+id/tv_per_man_title_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="@color/warm_grey"
                    android:layout_marginTop="9dp"
                    android:textSize="13.2sp"
                    android:text="@string/permission_mandatory_sub"
                    />

                <!-- 저장공간 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp">

                    <ImageView
                        android:id="@+id/iv_folder"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_authority_folder"
                        />

                    <TextView
                        android:layout_toRightOf="@id/iv_folder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_marginLeft="13dp"
                        android:layout_centerVertical="true"
                        android:textColor="#333333"
                        android:textSize="16.1sp"
                        android:text="@string/permission_save"
                        />

                </RelativeLayout>

                <!-- 전화 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp">

                    <ImageView
                        android:id="@+id/iv_phone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_authority_call"
                        />

                    <TextView
                        android:layout_toRightOf="@id/iv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_marginLeft="13dp"
                        android:layout_centerVertical="true"
                        android:textColor="#333333"
                        android:textSize="16.1sp"
                        android:text="@string/permission_phone"
                        />


                </RelativeLayout>

                <View
                    android:layout_marginTop="34dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/white_f5"/>

            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/btn_per_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="?android:attr/selectableItemBackground"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_51"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="15.7sp"
                android:text="@string/permission_confirm"
                />

        </RelativeLayout>

    </RelativeLayout>

</layout>